orbs/mug/1/work/compile.log
mug.c: In function ‘main’:
mug.c:11:5: error: expected declaration or statement at end of input
     int i;
     ^
